# car_sale_model

./: .gitignore  README.md  pyproject.toml
bilbasen/: cli.py  scrape.py
