[tool.poetry]
name = "bilbasen"
version = "0.1.0"
description = ""
authors = ["matkvist <bejsebakkevej@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
tqdm = "^4.61.2"
selenium = "^3.141.0"
bs4 = "^0.0.1"
typer = "^0.3.2"
pyarrow = "^4.0.1"

[tool.poetry.scripts]
bilbasen = "bilbasen.cli:app"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
